--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
         <maven.surefire.version>2.10</maven.surefire.version>
     </properties>
 
+    <modules>
+        <module>parser</module>
+    </modules>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -51,7 +55,7 @@
             </dependency>
             <dependency>
                 <groupId>org.hamcrest</groupId>
-                <artifactId>hamcrest-core</artifactId>
+                <artifactId>hamcrest-all</artifactId>
                 <version>${hamcrest.version}</version>
                 <scope>test</scope>
             </dependency>
