--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
 
     <groupId>icebook</groupId>
     <artifactId>parent</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>${project.groupId}-${project.artifactId}</name>
+    <name>${project.groupId}.${project.artifactId}</name>
     <description>icebook - Simple simulator for SETS iceberg order book in Java.</description>
 
     <developers>
@@ -24,9 +24,11 @@
     </developers>
 
     <properties>
-        <current.version>0.1-SNAPSHOT</current.version>
-        <testng.version>6.3</testng.version>
+        <current.version>1.0-SNAPSHOT</current.version>
+        <java.version>1.6</java.version>
         <guava.version>13.0</guava.version>
+        <jparsec.version>2.0</jparsec.version>
+        <testng.version>6.3</testng.version>
         <hamcrest.version>1.1</hamcrest.version>
         <mockito.version>1.9.0</mockito.version>
         <maven.compiler.version>2.3.2</maven.compiler.version>
@@ -46,6 +48,11 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>jparsec</groupId>
+                <artifactId>jparsec</artifactId>
+                <version>${jparsec.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.testng</groupId>
