--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <properties>
         <current.version>1.0-SNAPSHOT</current.version>
-        <java.version>1.7</java.version>
+        <java.version>1.6</java.version>
         <guava.version>13.0</guava.version>
         <jsr305.version>2.0.0</jsr305.version>
         <jparsec.version>2.0</jparsec.version>
@@ -95,6 +95,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>${maven.cobertura.version}</version>
             </plugin>
         </plugins>
     </build>
