--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     </developers>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <current.version>1.0-SNAPSHOT</current.version>
         <java.version>1.6</java.version>
         <guava.version>13.0</guava.version>
