--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>icebook</groupId>
     <artifactId>icebook</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0</version>
     <packaging>jar</packaging>
     <description>icebook - Simple simulator for SETS iceberg order book in Java.
     </description>
@@ -24,7 +24,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <current.version>2.0-SNAPSHOT</current.version>
+        <current.version>2.0</current.version>
         <java.version>1.7</java.version>
         <junit.version>4.12</junit.version>
     </properties>
